--- a/style.css
+++ b/style.css
@@ -1,7 +1,14 @@
+
+@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@300&family=Roboto:ital,wght@1,900&display=swap');
+
+
 * {
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    font-family: 'Caudex', serif;
+    font-family: 'Poppins', sans-serif;
+    font-family: 'Roboto', sans-serif;
 }
 
 header {
@@ -11,20 +18,38 @@ header {
     justify-content: space-between;
     align-items: center;
     padding: 30px 10%;
-    background-image: linear-gradient(#24252A, black);
     opacity: 86%;
+    position: sticky;
+    top: 0;
+    background-color: #3498db;
+    color: white;
+  transition: background-color 0.3s ease;
+    
+}
+
+.images {
+    border-radius: 50px;
+}
+.images-1 {
+   border-radius: 40px;
+}
+
+.images-2 {
+    width: 50%;
+    border-radius: 40px;
 }
 
 .logo {
     font-size: 20px;
     font-weight: bolder;
-    color: white;
+    color: black;
     text-transform: capitalizes;
     letter-spacing: 1.5px;
     cursor: pointer;
 }
 
 nav li {
+    color: black;
     display: inline-block;
     list-style: none;
     padding: 0px 20px;
@@ -46,8 +71,10 @@ nav li a:hover {
 .first-part {
     height: 90vh;
     width: 100%;
+    border-radius: 20px;
     display: flex;
-    background-color: black;
+    background-color: #D3D3D3;
+   
 }
 .left-first-part {
     width: 50%;
@@ -55,47 +82,63 @@ nav li a:hover {
     display: flex;
     justify-content: center;
     align-items: center;
+   
     
 }
 .right-first-part {
     width: 50%;
     height: 90%;
-    background-color: black;
+  
     display: flex;
+    justify-content: center;
 }
 .hello {
    width: 100%;
-   height: 35%;
+   height: 30%;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
 }
 .hi {
+    height: 5vh;
     width: 100%;
-    color: #ffbd39;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 14px;
+    color: black;
+    font-size: 16px;
     display: flex;
-    justify-content: start;
-    align-items: center;
+    justify-content: center;
     margin-left: 25px;
-    text-transform: uppercase;
 }
 .nameDeveloper {
-    width: 100%;
-    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-    font-size: 60px;
+    height: 50%;
+    width: 50%;
+    font-size: 20px;
     display: flex;
-    justify-content: start;
-    align-items: center;
-    margin-left: 10px;
-    margin-bottom: 10px;
-    color: yellow;
+    justify-content: center;
+    border: 2px solid #D43F52;
+    padding: 25px 35px;
+    color: #D43F52;
 }
+
+@keyframes fade-inout{
+    0%{opacity: 1;}
+    100%{opacity: 0;}
+}
+
+.name {
+    height: 30%;
+    animation: fade-inout 5s infinite alternate;
+}
+
+.loremIpsum {
+    text-align: center;
+    font-size: 16px;
+    height: 15vh;
+    font-weight: lighter;
+}
+
 .profesion {
     width: 100%;
-    font-family: serif;
     font-size: 30px;
     display: flex;
     margin-left: 10px;
@@ -103,22 +146,33 @@ nav li a:hover {
 }
 
 .buttons {
-    width: 100%;
+   width: 100%;
+   display: flex;
+   justify-content: center;
+}
+.button-hire {
     display: flex;
-    align-items: flex-start;
+    width: 50%;
+    justify-content: space-around;
+    
 }
 
 .work {
-width: auto;
-height: auto;
-font-family: serif;
 color: black;
-background-color: yellow; 
-border-radius: 40px;
-font-size: 18px;
+border-radius: 10px;
+font-size: 16px;
 display: flex;
-line-height: 2.3em;
-letter-spacing: 1px;
+justify-content: center;
+align-items: center;
+width: 50%;
+height: 10vh;
+
+}
+
+.work:hover{
+    background-color: #D43F52; /* New background color for hover */
+  box-shadow: 0 30px 40px rgba(0, 0, 0, 0.2);
+  transition: all .4s ease;
 }
 
 .about {
@@ -126,56 +180,105 @@ letter-spacing: 1px;
     width: 100%;
     display: flex;
 }
+
 .secondSection {
-    height: 100%;
+    height: 50%;
     width: 100%;
     display: flex;
+    cursor: pointer;
 }
+
+.javascriptButtons{
+    color: black;
+    
+}
+
+.javascriptButtons:hover{
+    color: #6A2E35;
+    cursor: pointer;
+}
+
+.resumeSection:hover{
+    color: #32746D;
+    cursor: pointer;
+}
+
+.servicesSection:hover {
+    color: #35A7FF;
+    cursor: pointer;
+}
+
 .leftSecondSection {
     height: 100%;
     width: 50%;
     display: flex;
-    background-color: black;
+    justify-content: center;
+   
 }
 
-.rightSecondSection {
-    width: 50%;
+/* .rightSecondSection {
+    width: 100%;
+    height: 65vh;
+    padding: 50px;
     display: flex;
+    justify-content: center;
     flex-wrap: wrap;
-    background-color: black;
+    color: white;
+    background-color: #1a1a1a;
+    
+} */
+
+
+.div-insideJavascript {
+    display: flex;
+    text-align: center;
+    width: 100%;
+    font-size: 16px;
+    flex-wrap: wrap;
+}
+.divForTAndS {
+    display: flex;
+    width: 100%;
+    height: 13vh;
+    flex-direction: column;
+    
 }
 
-html {
+.div2-insideJavascript{
+    width: 95%;
+    text-align: center;
+    font-size: 16px;
+}
+
+
+
+/* .rightSecondSection:hover {
+} */
+
+/* html {
     scroll-behavior: smooth;
     scroll-padding: 0rem;
-}
+} */
 
-.title {
+/* .title {
     width: 100%;
-    font-family: "Poppins", Arial, sans-serif;
     font-size: 50px;
     display: flex;
     justify-content: center;
-    align-items: center;
+    flex-direction: row;
     color: white;
 }
 
 .information {
     width: 100%;
     font-size: 16px;
-    color: gray;
     display: flex;
     justify-content: center;
-    align-items: center;
 }
 
-.important-information {
-    width: 100%;
-    display: flex;
-    justify-content: center;
-    background-color: black;
-    color: gray;
-}
+.lorem {
+    text-align: center;
+} */
 
 ul {
     line-height: 2.5;
@@ -186,23 +289,28 @@ ul {
     width: 100vw;
     flex-wrap: wrap;
     display: flex;
-    background-color: black;
 }
 
 .firstSectionThirdSection {
-    height: 20%;
+    height: 30%;
     width: 100%;
     display: flex;
     justify-content: space-around;
     
 }
 .left {
-    background-color: #343a40;
+
     width: 40%;
     display: flex;
     flex-wrap: wrap;
-    color: white
+    color: white;
+    background-image: linear-gradient(to bottom, #3498db, #2980b9);
+    transition: background-image 0.3s ease;
+    border-radius: 20px;
     
+}
+.left:hover {
+    background-image: linear-gradient(to bottom, #e74c3c, #3498db);
 }
 
 .right {
@@ -220,22 +328,6 @@ ul {
     justify-content: space-around; 
 }
 
-.riight {
-    color: white;
-    background-color: #343a40;
-    width: 40%;
-    display: flex;
-    flex-wrap: wrap;
-}
-
-.leeft {
-    color: white;
-    background-color: #343a40;
-    width: 40%;
-    display: flex;
-    flex-wrap: wrap;
-}
-
 .thirdSectionThirdSection {
     height: 20%;
     width: 100%;
@@ -243,21 +335,7 @@ ul {
     justify-content: space-around; 
 }
 
-.righht {
-    color: white;
-    background-color: #343a40;
-    width: 40%;
-    display: flex;
-    flex-wrap: wrap;
-}
 
-.lefft {
-    color: white;
-    background-color: #343a40;
-    width: 40%;
-    display: flex;
-    flex-wrap: wrap;
-}
 
 .thirdTitle { 
     height: 5%;
@@ -265,12 +343,10 @@ ul {
    font-size: 50px;
     display: flex;
     justify-content: center;
-    color: white;
 } 
 
 .description {
     width: 100%;
-    color: white;
     font-size: 16px;
     display: flex;
     justify-content: center;
@@ -278,42 +354,25 @@ ul {
 
 }
 
-.importantDescription {
-    width: 50%;
-    display: flex;
-    flex-wrap: wrap;
-    flex-direction: column;
-    background-color: #24252A;
-}
-
 .date {
     height: 15%;
     width: 50vw;
     font-size: 26px;
     display: flex;
-    font-weight: bold;
     justify-content: center;
-    color: #ffbd39;
 }
 
-h2 {
-    color: white;
-    width: 100%;
-    display: flex;
-    justify-content: center;
-}
+
 .university {
     height: 10%;
     width: 150px;
     font-size: 12px;
-    color: white;
     display: flex;
     justify-content: center;
 }
 
 .words {
     height: 30%;
-    color: white;
     display: flex;
     justify-content: center;
     text-align: center;
@@ -324,7 +383,7 @@ h2 {
     width: 100%;
     flex-wrap: wrap;
     padding: 100px;
-    background-color: black;
+    
 }
 
 .fourthTitle {
@@ -356,30 +415,31 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 40px;
 }
 
 .webDesign:hover {
-    background-color: #7DD181;
+    background-color: #3498db;
 }
 
 .photography:hover {
-    background-color: #7DD181;
+    background-color: #3498db;
 }
 
 .webDeveloper:hover {
-    background-color: #7DD181;
+    background-color: #3498db;
 }
 
 .appDeveloping:hover {
-    background-color: #7DD181;
+    background-color: #3498db;
 }
 
 .branding:hover {
-    background-color: #7DD181;
+    background-color: #3498db;
 }
 
 .productStrategy:hover {
-    background-color: #7DD181;
+    background-color: #3498db;
 }
 
 .photography {
@@ -389,6 +449,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 40px;
 }
 
 .webDeveloper {
@@ -398,6 +459,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 40px;
 }
 
 .web {
@@ -413,6 +475,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 40px;
 }
 
 .branding {
@@ -422,6 +485,7 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 40px;
 }
 
 .productStrategy {
@@ -431,12 +495,13 @@ h2 {
     display: flex;
     justify-content: center;
     align-items: center;
+    border-radius: 30px;
 }
 
 .skill {
     height: 100vh;
     width: 100%;
-    background: #222;
+    background: #3498db;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -673,10 +738,7 @@ h2 {
 
 
 
-.wrapper .container .hero-section .gallery .caption p{
-    font-size: 16px;
-    text-align: center;
-}
+ 
 
 @media screen and (max-width: 992px) {
     .wrapper .container .hero-section {
@@ -695,7 +757,7 @@ h2 {
 }
 
 .blogs {
-    height: 150vh;
+    height: 200vh;
     width: 100%;
     background-color: #222;
 }
@@ -718,35 +780,187 @@ h2 {
 
 .pictures {
     width: 100%;
-    height: 100%;
+    height: 70vh;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
+    list-style-type: none;
 }
 
-.petra {
+
+img {
+}
+
+img:hover {
+    background: #125;
+}
+
+.etc {
     width: 100%;
+    height: 30vh;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-around;
+    padding: 20px;
+}
+
+.award {
+    width: 20%;
     height: 100%;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #3B383A;
 }
 
-.petra:hover {
-    background: #00bcd4;
-}
-
-.isreal {
+.one {
     width: 100%;
-    height: 50vh;
+    height: 10vh;
+    font-weight: bold;
+    color: yellow;
+    text-align: center;
+    font-size: 30px;
+    
 }
 
-.isreal:hover {
-    background: #125;
+.project {
+    width: 21%;
+    height: 100%;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #3B383A;
 }
 
-.paris {
+.thousand {
     width: 100%;
-    height: 50vh;
+    height: 10vh;
+    font-weight: bold;
+    color: yellow;
+    text-align: center;
+    font-size: 30px;
+    
 }
 
-.paris:hover {
-    background: #125;
+.satisfied {
+    width: 20%;
+    height: 100%;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #3B383A;
+}
+
+.two {
+    width: 100%;
+    height: 10vh;
+    font-weight: bold;
+    color: yellow;
+    text-align: center;
+    font-size: 30px;
+    
+}
+
+.coffee {
+    width: 21%;
+    height: 100%;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #3B383A;
+}
+
+.hundred {
+    width: 100%;
+    height: 10vh;
+    font-weight: bold;
+    color: yellow;
+    text-align: center;
+    font-size: 30px;   
+}
+
+.beautiful {
+    width: 100%;
+    height: 50%;
+    position: relative;
+    display: inline-block;
+}
+
+.landscape {
+    width: 100%;
+    height: 50%;
+}
+
+.night {
+    width: 100vw;
+    text-align: center;
+    height: 73vh;
+}
+
+.wordss {
+    font-size: 30px;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+}
+
+.colored-text {
+    color: yellow;
+}
+
+.woord {
+    font-size: 16px;
+    position: absolute;
+    left: 50%;
+    bottom: 30%;
+    transform: translate(-50%, -50%);  
+}
+
+.hire-me {
+width: auto;
+height: auto;
+color: black;
+background-color: black; 
+border-radius: 40px;
+font-size: 18px;
+display: flex;
+line-height: 2.3em;
+letter-spacing: 1px;
+font-size: 16px;
+position: absolute;
+left: 50%;
+bottom: 10%;
+transform: translate(-50%, -50%); 
+}
+
+.contact {
+    height: 100vh;
+    width: 100%;
+}
+
+.lastTitle {
+    width: 100%;
+    text-align: center;
+    font-size: 30px;
+    height: 6%;
+}
+
+.lastText {
+    width: 100%;
+    text-align: center;
+    font-size: 16px;
+    height: 10%;
+}
+
+.sign {
+    height: 20vh;
+    width: 20vw;
+}
+
+@media only screen and (max-width: 480px){
+    .first-part {
+        grid-template-columns: 1fr;
+        grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr 1.2fr 1.2fr 1fr;
+        grid-template-areas: 
+        "left-first-part"
+        "right-first-part";    
+    }
 }
