--- a/style.css
+++ b/style.css
@@ -6,8 +6,6 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
-    font-family: 'Caudex', serif;
-    font-family: 'Poppins', sans-serif;
     font-family: 'Roboto', sans-serif;
 }
 
@@ -32,6 +30,8 @@ header {
 }
 .images-1 {
    border-radius: 40px;
+   display: flex;
+   width: 50%;
 }
 
 .images-2 {
@@ -77,11 +77,12 @@ nav li a:hover {
    
 }
 .left-first-part {
-    width: 50%;
+    width: 60%;
     height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
+    flex-wrap: wrap;
    
     
 }
@@ -128,6 +129,10 @@ nav li a:hover {
 .name {
     height: 30%;
     animation: fade-inout 5s infinite alternate;
+    display: flex;
+    justify-content: center;
+    width: 100%;
+    bottom: 50%;
 }
 
 .loremIpsum {
@@ -135,6 +140,8 @@ nav li a:hover {
     font-size: 16px;
     height: 15vh;
     font-weight: lighter;
+    display: flex;
+    width: 90%;
 }
 
 .profesion {
@@ -235,7 +242,21 @@ height: 10vh;
     width: 100%;
     font-size: 16px;
     flex-wrap: wrap;
+    justify-content: center;
+    
 }
+.showMoreButton {
+    color: black;
+    border-radius: 30px;
+}
+
+.showMoreButton:hover {
+    background-color: #6A2E35;
+    border-radius: 25px;
+    transition: all .5s ease;
+
+}
+
 .divForTAndS {
     display: flex;
     width: 100%;
@@ -281,13 +302,14 @@ height: 10vh;
 } */
 
 ul {
-    line-height: 2.5;
+    line-height: 2;
 }
 
 .thirdSection {
     height: 150vh;
     width: 100vw;
     flex-wrap: wrap;
+    margin-top: 80px;
     display: flex;
 }
 
@@ -298,6 +320,8 @@ ul {
     justify-content: space-around;
     
 }
+
+
 .left {
 
     width: 40%;
@@ -379,8 +403,8 @@ ul {
 }
 
 .fourthSection {
-    height: 150vh;
-    width: 100%;
+    height: 150VH;
+    width: 100VW;
     flex-wrap: wrap;
     padding: 100px;
     
@@ -389,8 +413,11 @@ ul {
 .fourthTitle {
     height: 5%;
     width: 100%;
+    display: flex;
     flex-direction: column;
-    color: white;
+    justify-content: center;
+    text-align: center;
+    color: black;
 }
 
 .word {
@@ -398,7 +425,7 @@ ul {
     width: 100%;
     display: flex;
     justify-content: center;
-    color: white;
+    color: black;
 }
 .service1 {
     width: 100%;
@@ -501,7 +528,6 @@ ul {
 .skill {
     height: 100vh;
     width: 100%;
-    background: #3498db;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -663,7 +689,6 @@ ul {
 .projects {
     height: 170vh;
     width: 100%;
-    background-color: #A8B4A5;
     padding-left: 30px;
     flex-wrap: wrap;
     display: flex;
@@ -759,7 +784,6 @@ ul {
 .blogs {
     height: 200vh;
     width: 100%;
-    background-color: #222;
 }
 
 .seventhTitle {
@@ -788,7 +812,9 @@ ul {
 }
 
 
-img {
+
+ img {
+
 }
 
 img:hover {
@@ -820,6 +846,7 @@ img:hover {
     text-align: center;
     font-size: 30px;
     
+    
 }
 
 .project {
@@ -837,6 +864,7 @@ img:hover {
     color: yellow;
     text-align: center;
     font-size: 30px;
+    
     
 }
 
@@ -856,6 +884,7 @@ img:hover {
     text-align: center;
     font-size: 30px;
     
+    
 }
 
 .coffee {
@@ -872,95 +901,254 @@ img:hover {
     font-weight: bold;
     color: yellow;
     text-align: center;
-    font-size: 30px;   
-}
-
-.beautiful {
-    width: 100%;
-    height: 50%;
-    position: relative;
-    display: inline-block;
-}
-
-.landscape {
-    width: 100%;
-    height: 50%;
-}
-
-.night {
-    width: 100vw;
-    text-align: center;
-    height: 73vh;
-}
-
-.wordss {
     font-size: 30px;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    text-align: center;
+       
 }
 
-.colored-text {
-    color: yellow;
-}
-
-.woord {
-    font-size: 16px;
-    position: absolute;
-    left: 50%;
-    bottom: 30%;
-    transform: translate(-50%, -50%);  
-}
-
-.hire-me {
-width: auto;
-height: auto;
-color: black;
-background-color: black; 
-border-radius: 40px;
-font-size: 18px;
-display: flex;
-line-height: 2.3em;
-letter-spacing: 1px;
-font-size: 16px;
-position: absolute;
-left: 50%;
-bottom: 10%;
-transform: translate(-50%, -50%); 
-}
-
-.contact {
-    height: 100vh;
-    width: 100%;
-}
-
-.lastTitle {
-    width: 100%;
-    text-align: center;
-    font-size: 30px;
-    height: 6%;
-}
-
-.lastText {
-    width: 100%;
-    text-align: center;
-    font-size: 16px;
-    height: 10%;
-}
-
-.sign {
-    height: 20vh;
-    width: 20vw;
-}
-
-@media only screen and (max-width: 480px){
+@media only screen and (min-width: 320px) and (max-width: 480px) {
     .first-part {
-        grid-template-columns: 1fr;
-        grid-template-rows: 0.4fr 0.4fr 2.2fr 1.2fr 1.2fr 1.2fr 1fr;
-        grid-template-areas: 
-        "left-first-part"
-        "right-first-part";    
+        display: flex;
+        flex-wrap: wrap;
+        width: 100vw;
     }
+
+    .left-first-part {
+        width: 100%;
+        height: 50%;
+        display: flex;
+    }
+
+    .hello {
+        height: 35vh;
+    }
+
+
+    .nameDeveloper {
+        height: 1vh;
+    }
+
+    .right-first-part {
+        width: 100%;
+        height: 35vh;
+    }
+
+    .name {
+        height: 4vh;
+    }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    .secondSection {
+        width: 95%;
+    }
+
+    .thirdTitle {
+        font-size: 25px;
+        display: flex;
+    }
+
+    .description {
+        width: 95vw;
+        height: 10vh;
+        display: flex;
+        text-align: center;
+    }
+
+    .secondSectionThirdSection {
+        display: none;
+    }
+
+    .thirdSectionThirdSection {
+        display: none;
+    }
+
+    .thirdSection {
+        height: 80vh;
+    }
+
+    .firstSectionThirdSection:hover {
+        background-color: red;
+    }
+}
+
+@media only screen and (min-width: 320px) and (max-width: 480px) {
+    header {
+        width: 100vw;
+        border-radius: 10px;
+    }
+
+    .javascriptButtons {
+        color: white;
+        display: flex;
+        justify-content: end;
+    }
+
+    .date {
+        font-size: 12px;
+    }
+
+    .degree {
+        font-size: 12px;
+        width: 100%;
+        display: flex;
+        justify-content: center;
+    }
+
+    .words {
+        font-size: 13px;
+        width: 100%;
+        height: 13vh;
+    }
+
+    .fourthSection {
+        flex-direction: column;
+        align-items: center; 
+        padding: 0;
+        height: 150vh;
+    }
+
+    .webDesign, .photography, .webDeveloper,
+    .web, .appDeveloping, .branding, .productStrategy{
+        width: 90%;
+    }
+
+    .word {
+        width: 100%;
+        display: flex;
+        justify-content: center;
+        text-align: center;
+    }
+
+    .skill {
+        height: 150vh;
+        transform: translateY(20%);
+    }
+
+    .skills {
+        width: 90%; 
+        height: 80px;
+    }
+
+    .progress-bar {
+        transform: scale(1); 
+        width: 100%;
+    }
+
+    .projects {
+        transform: translateY(25%);
+        height: 124vh;
+        width: 100%;
+    }
+
+    .sixthTitle {
+        height: 10vh;
+    }
+
+    .wrapper {
+        height: 1vh;
+    }
+
+    .container {
+        transform: translateY(36%);
+        height: 1vh;
+    }
+
+    .hero-section {
+        width: 100%;
+    }
+
+    .sixthSection {
+        height: 124vh;
+        width: 100%;
+    }
+
+    .blogs {
+        transform: translateY(30%);
+        height: 140vh;
+    }
+
+    .pictures {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .etc {
+        width: 100%;
+        display: flex;
+        justify-content: space-evenly;
+        padding: 0;
+    }
+
+    .hamburger {
+        display: none;
+        flex-direction: column;
+        cursor: pointer;
+        display: block;
+    }
+    
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #fff;
+        margin: 3px 0;
+    }
+
+    .navbar {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        background-color: #333;
+        padding: 10px 20px;
+    }
+    
+    .bar {
+        width: 25px;
+        height: 3px;
+        background-color: #fff;
+        margin: 3px 0;
+    }
+    
+    .nav-links li {
+      display: flex;
+      justify-content: flex-end;
+
+    }
+    
+    .nav-links p {
+        text-decoration: none;
+        color: #fff;
+        transition: color 0.3s ease;
+    }
+    
+    .nav-links p:hover {
+        color: #f39c12;
+    }
+    
+        .hamburger {
+            display: flex;
+        }
+    
+        .nav-links {
+            width: 100%;
+            display: none;
+            flex-direction: column;
+            background-color: #333;
+            position: absolute;
+            border-radius: 10px;
+            top: 75px;
+            left: 50%;
+            width: 100%;
+            transform: translateX(70%); 
+        }
+    
+        .nav-links.active {
+            display: flex;
+            width: 30%;
+        }
+    
+        .nav-links li {
+            margin-bottom: 10px;
+        }
+
 }
